--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 blinker==1.7.0
-boto3==1.33.1
-botocore==1.33.1
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -8,13 +6,17 @@ click==8.1.7
 cryptography==41.0.7
 Flask==3.0.0
 idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 MarkupSafe==2.1.3
 Naked==0.1.32
+packaging==23.2
+pluggy==1.3.0
 pycparser==2.21
 PyJWT==2.8.0
+pytest==7.4.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
